fix: fix visibility

--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -57,10 +57,10 @@ body {
 }
 
 .hide {
-  height: 0;
+
   opacity: 0;
-  overflow: hidden;
-  transition: all .3s ease-in-out;
+  visibility: hidden;
+
 }
 
 a {
