--- a/momentum/src/Settings/index.css
+++ b/momentum/src/Settings/index.css
@@ -5,6 +5,7 @@
 .show .settings {
   height: 240px;
   opacity: .8;
+  visibility:visible;
 }
 
 
@@ -23,8 +24,9 @@
   position: absolute;
   z-index: 10;
   width: 220px;
-  height: 0px;
+
   opacity: 0;
+  visibility: hidden;
   overflow: hidden;
   top: -250px;
   background: rgba(55, 55, 54, 0.719);
