--- a/momentum/src/Weather/index.css
+++ b/momentum/src/Weather/index.css
@@ -51,24 +51,3 @@
   opacity: .6;
 }
 
-.hide .city {
-  height: 0;
-  padding: 0;
-}
-
-.hide .weather-error {
-  height: 0;
-  padding: 0;
-}
-.hide .description-container {
-  height: 0;
-  padding: 0;
-}
-.hide .wind {
-  height: 0;
-  padding: 0;
-}
-.hide .humidity {
-  height: 0;
-  padding: 0;
-}
